--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,52 +4,35 @@ on:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
   build-and-scan:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout du code
+      uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+    - name: Connexion à DockerHub
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Construction de l'image Docker
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/todo-app:latest .
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/td-devsecops:latest
+    - name: Push de l'image Docker
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/todo-app:latest
 
-      - name: Scan image with Trivy
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/td-devsecops:latest
-          format: sarif
-          output: trivy-report.sarif
-          severity: CRITICAL,HIGH
+    - name: Scan Trivy
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: '${{ secrets.DOCKERHUB_USERNAME }}/todo-app:latest'
+        format: 'table'
+        exit-code: '1'
+        ignore-unfixed: true
+        severity: 'CRITICAL,HIGH'
 
-      - name: Upload Trivy report to GitHub Security
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: trivy-report.sarif
-
-      - name: Install Checkov
-        run: pip install checkov
-
-      - name: Run Checkov scan
-        run: checkov -d . --output sarif > checkov-report.sarif
-
-      - name: Upload Checkov report to GitHub Security
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: checkov-report.sarif
+    - name: Scan Checkov
+      uses: bridgecrewio/checkov-action@master
+      with:
+        directory: .
+        framework: all
