--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,38 +2,45 @@ name: CI/CD DevSecOps
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
 
 jobs:
   build-and-scan:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/todo-app .
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Scan with Trivy
-        uses: aquasecurity/trivy-action@v0.16.1
-        with:
-          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/todo-app
-          format: table
-          severity: CRITICAL,HIGH
-        continue-on-error: true
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/todo-app:latest
 
-      - name: Run Checkov
-        uses: bridgecrewio/checkov-action@v12.2758.0
-        with:
-          directory: .
-          framework: dockerfile,compose
-        continue-on-error: true
+    - name: Scan with Trivy
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/todo-app:latest
+        format: table
+        exit-code: 0  # ne bloque pas le pipeline
+        severity: CRITICAL,HIGH
+
+    - name: Install Checkov
+      run: pip install checkov
+
+    - name: Run Checkov
+      run: checkov -d . || true
