--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,11 @@ jobs:
   build-and-scan:
     runs-on: ubuntu-latest
 
+    permissions:
+      actions: read
+      contents: read
+      security-events: write  
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -31,16 +36,28 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/todo-app:latest
 
-    - name: Scan with Trivy
+    - name: Run Trivy (generate SARIF)
       uses: aquasecurity/trivy-action@master
       with:
         image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/todo-app:latest
-        format: table
-        exit-code: 0  # ne bloque pas le pipeline
+        format: sarif
+        output: trivy-results.sarif
+        exit-code: 0
         severity: CRITICAL,HIGH
+
+    - name: Upload Trivy scan to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: trivy-results.sarif
 
     - name: Install Checkov
       run: pip install checkov
 
-    - name: Run Checkov
-      run: checkov -d . || true
+    - name: Run Checkov (generate SARIF)
+      run: |
+        checkov -d . -o sarif > checkov-results.sarif || true
+
+    - name: Upload Checkov scan to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: checkov-results.sarif
